changed x and y to lat and long
